--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,9 +1,11 @@
 $breakpoint: 768px;
 
 body {
+  margin: 0;
+  padding: 0;
   color: #222222;
   background: #f5f5f7;
-  font-family: sans-serif;
+  font-family: Helvetica, Verdana, sans-serif;
   font-size: 12px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
